<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height=  "match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_weight="20"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_share"/>
            <TextView
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/soft_pink"
                android:textStyle="bold"
                android:text="Masuk"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:padding="12dp"
                android:background="@drawable/view_round_edit_text_white"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/view_round_edit_text_white"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_marginBottom="25dp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:text="@string/masuk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/background_button_color_primary"
                android:maxLines="1"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/belum_punya_akun"/>

                <TextView
                    android:id="@+id/register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/soft_pink"
                    android:text=" Daftar"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


</RelativeLayout>